feat: implement redis caching and tenant-aware IDOR security